<resources>
    <string name="app_name">Price Per Unit</string>
    <string name="unit_type">Unit Type:</string>
    <string name="weight">Weight</string>
    <string name="volume">Volume</string>
    <string name="length">Length</string>
    <string name="pieces">Pieces</string>
    <string name="clear">Clear</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="unidades">Quantity</string>
    <string name="cantidad">Size Per Qty</string>
    <string name="items_ordered_by_best_ratio">Items Ordered by Best Ratio</string>
    <string name="show_in">Show in:</string>
    <string name="settings">Settings</string>
    <string name="settings_and_about">Settings &amp; About</string>
    <string name="currency_symbol">Currency Symbol</string>
    <string name="rounding">Rounding (d.p.)</string>
    <string name="show_results_tile">Show Results Tile</string>
    <string name="remember_data">Remember Data</string>
    <string name="version">Version: %1$s</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="bug_reporting">Bug Reporting</string>
    <string name="ayuda">Help</string>
    <string name="developers_site">Developers Site</string>
    <string name="licenses">Licenses</string>
    <string name="developer_site_url" translatable="false">https://informiguel.blogspot.com/</string>
    <string name="bug_reporting_url" translatable="false">https://github.com/informiguel/ComparaPrecios/issues</string>
    <string name="licenses_html" translatable="false"><![CDATA[
    <html>
    <head>
        <style>
            body {
            font-family: sans-serif;
            }
            pre {
            padding: 1em;
            white-space: pre-wrap;
            }
        </style>
    </head>
    <body>

    <h3>
        Apache License
        <br/>
        Version 2.0, January 2004
    </h3>
    <ul>
    <li>
            <b>Aplicación </b>
            <br/>
             <pre>
             Este producto es una adaptación de la app Price-per-unit.
             Desarrollado originalmente por:
                  https://nitratine.net/
                  https://github.com/brentvollebregt/price-per-unit
              Y modificado por:
                  https://informiguel.blogspot.com/
                  https://github.com/informiguel/ComparaPrecios
             </pre>
    </li>
        <li>
            <b>material-design-icons</b>
            <br/>
             Copyright &copy; 2014, Google
        </li>
        <li>
            <b>material-ripple</b>
            <br/>
             Copyright &copy; 2015, Balys Valentukevicius
        </li>
    </ul>
    <pre>
        Licensed under the Apache License, Version 2.0 (the License);
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

            http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an AS IS BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </pre>
    </body>
    </html>
    ]]></string>
</resources>
