<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:background="#32a1a1a1"
    android:orientation="vertical"
    android:padding="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="2"
            android:background="@color/colorItem"
            android:ems="10"
            android:hint="@string/item_name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/unitSpnr"
            android:layout_height="24dp"
            android:layout_width="0dp"

            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/priceEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/sizePerQtyEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/cantidad"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:text=" x "
            android:textColor="#DDAA00"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/quantityEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/unidades"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ratiotextView"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="2"
            android:padding="2dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/moveDownBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:scaleY="-1"
                app:srcCompat="@drawable/arrow_upward"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/moveUpBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/blue_navy"
                app:srcCompat="@drawable/arrow_upward"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/deleteBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/red"
                app:srcCompat="@drawable/delete"
                app:tint="@color/white" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>