<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ComparaPrecios.MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/holo_red_dark"
                android:padding="14dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.1"
                    android:gravity="right|center_vertical"
                    android:text="@string/unit_type"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/unitTypeSpnr"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    app:backgroundTint="@android:color/white" />

                <Button
                    android:id="@+id/clearBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:text="@string/clear"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:orientation="vertical">
            </LinearLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:mrl_rippleBackground="@color/colorItem"
                app:mrl_rippleColor="#FFFFFF"
                app:mrl_rippleDelayClick="false">

                <RelativeLayout
                    android:id="@+id/addItemLayout"
                    android:layout_width="match_parent"
                    android:layout_height="35dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:gravity="end|center"
                            android:text="@string/add_item"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />
                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/add_circle"
                            app:tint="@android:color/white" />
                    </LinearLayout>
                </RelativeLayout>
            </com.balysv.materialripple.MaterialRippleLayout>

            <LinearLayout
                android:id="@+id/resultsRoot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:background="@color/colorItem"
                        android:padding="2dp"
                        android:text="@string/items_ordered_by_best_ratio"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.15"
                        android:background="@color/colorItem"
                        android:gravity="end"
                        android:text="@string/show_in"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/resultsUnitSpinner"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        app:backgroundTint="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/results"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textAlignment="textEnd"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="6dp"
                            android:text="TextView"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/white" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                app:mrl_rippleBackground="@android:color/holo_red_dark"
                app:mrl_rippleColor="#FFFFFF"
                app:mrl_rippleDelayClick="false">

                <RelativeLayout
                    android:id="@+id/settingsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="30dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <TextView
                            android:id="@+id/settingsTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:gravity="center|end"
                            android:text="@string/settings"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/settings"
                            app:tint="@android:color/white" />

                    </LinearLayout>
                </RelativeLayout>
            </com.balysv.materialripple.MaterialRippleLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
